--- a/Client/main.html
+++ b/Client/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>What's your Fortune?</title>
 </head>
-<body>
+<body class="mainpg">
 <div class="header">
     <h1 class="header-front">What's your Fortune?</h1>
     <h1 class="header-back">What's your Fortune?</h1>
