--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Welcome to Fortune Teller</title>
 </head>
-<body>
+<body class="welcomepg">
 
-    <h1>What's your Fortune?</h1>
-    <p>The crystal ball knows all. Click the button below to have the ball show your fortune or ask the ball a question.</p>
+    <div class="header">
+        <h1 class="header-front">What's your Fortune?</h1>
+        <h1 class="header-back">What's your Fortune?</h1>
+    </div>
+    
+    <div class="middle">
+    <p>The crystal ball knows all. Click enter below to find what the future holds.</p>
 
 
     <input type="email" id="email" placeholder="Email"/>
     <button>Enter</button>
     <a href="./main.html">Enter</a>
-
+    </div>
 
     <script src="welcome.js"></script>
 </body>
