post feature added

--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -18,11 +18,12 @@
     <p>The crystal ball knows all. Click enter below to find what the future holds.</p>
 
 
-    <input type="email" id="email" placeholder="Email"/>
-    <button>Enter</button>
-    <a href="./main.html">Enter</a>
+    <input type="email" id="email" placeholder="Email" />
+    <button id="enter">Enter</button>
+    <!-- <a href="./main.html">Enter</a> -->
     </div>
 
+    <script src="../node_modules/axios/dist/axios.min.js"></script>
     <script src="welcome.js"></script>
 </body>
 </html>
