Welcome page input field corrected.

--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -15,12 +15,12 @@
     </div>
     
     <div class="middle">
-    <p>The crystal ball knows all. Click enter below to find what the future holds.</p>
+    <p>The crystal ball knows all. Enter your email below to find what your future holds.</p>
 
-
-    <input type="email" id="email" placeholder="Email" />
-    <button id="enter">Enter</button>
-    <!-- <a href="./main.html">Enter</a> -->
+<form id="entryInput" action="./main.html">
+    <input type="email" id="email" placeholder="Email" required/>
+    <button id="enterBtn">Enter</button></a>
+</form>    
     </div>
 
     <script src="../node_modules/axios/dist/axios.min.js"></script>
