--- a/Client/main.html
+++ b/Client/main.html
@@ -25,6 +25,11 @@
     <div id="question"></div>
     <div id="submitBtn"></div>
 
+    <!-- <form id="entryInput">
+        <input type="email" id="email" placeholder="Email" required/>
+        <input type="submit" id="enterBtn" value="submit"></input>
+    </form>  -->
+
     <script src="../node_modules/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
 
