--- a/Client/main.html
+++ b/Client/main.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/css">
     <title>What's your Fortune?</title>
 </head>
 <body class="mainpg">
@@ -25,13 +26,10 @@
     <div id="question"></div>
     <div id="submitBtn"></div>
 
-    <!-- <form id="entryInput">
-        <input type="email" id="email" placeholder="Email" required/>
-        <input type="submit" id="enterBtn" value="submit"></input>
-    </form>  -->
 
     <script src="../node_modules/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
+    <script src="/mainjs"></script>
 
 </body>
 </html>
