--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -25,5 +25,6 @@
 
     <script src="../node_modules/axios/dist/axios.min.js"></script>
     <script src="./welcome.js"></script>
+    <script src="/welcomejs"></script>
 </body>
 </html>
