--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/css">
     <title>Welcome to Fortune Teller</title>
 </head>
 <body class="welcomepg">
