--- a/Client/main.html
+++ b/Client/main.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="/css">
     <title>What's your Fortune?</title>
 </head>
 <body class="mainpg">
+    <a id="back" href="./welcome.html">Back</a>
 <div class="header">
     <h1 class="header-front">What's your Fortune?</h1>
     <h1 class="header-back">What's your Fortune?</h1>
@@ -23,13 +23,13 @@
     <button id="ask">Ask a question</button>
 
     <div id="message"></div>
+    <div id="greeting"></div>
     <div id="question"></div>
     <div id="submitBtn"></div>
 
 
     <script src="../node_modules/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
-    <script src="/mainjs"></script>
 
 </body>
 </html>
