--- a/Client/main.html
+++ b/Client/main.html
@@ -31,7 +31,7 @@
 
     <script src="../node_modules/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
-    <script src="/main"></script>
+    <script src="/mainjs"></script>
 
 </body>
 </html>
