--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -30,7 +30,7 @@
 
     <script src="../node_modules/axios/dist/axios.min.js"></script>
     <script src="./welcome.js"></script>
-    <script src="/welcome"></script>
+    <script src="/welcomejs"></script>
     <script>
         function goFortune() {
             window.location.href="./main.html"
