--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -28,7 +28,7 @@
 </form>    
     </div>
 
-    <script src="../node_modules/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./welcome.js"></script>
     <script src="/welcomejs"></script>
     <script>
