--- a/Client/welcome.html
+++ b/Client/welcome.html
@@ -29,11 +29,10 @@
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./welcome.js"></script>
     <script src="/welcomejs"></script>
     <script>
         function goFortune() {
-            window.location.href="./main.html"
+            window.location.href="./main.html?r=true"
         }
     </script>
 </body>
